--- a/demos/lz3.html
+++ b/demos/lz3.html
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Led Zeppelin 3 - Dylan Majewski</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link src="../static/lz3/lz3.css">>
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/lz3/lz3.css">>
     
     <script 
     src="../static/lz3/rotator.js">
