--- a/demos/lz3.html
+++ b/demos/lz3.html
@@ -49,6 +49,7 @@
         <a href="/demos">Demos</a>
         <a href="/blog">Blog</a>
         <a href="/about">About</a>
+        <a href="/unfinished-page">Unfinished Page</a>
     </nav>
     
     <main>
