--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,7 @@
         <a href="/demos">Demos</a>
         <a href="/blog">Blog</a>
         <a href="/about">About</a>
+        <a href="/unfinished-page">Unfinished Page</a>
     </nav>
     
     <main>
