Added Projects, other fixes

--- a/demos/lz3.html
+++ b/demos/lz3.html
@@ -16,7 +16,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Led Zeppelin 3 - Dylan Majewski</title>
+    <title>Led Zeppelin 3 Vinyl Album Art Simulator - Dylan Majewski</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../static/lz3/lz3.css">
     <script 
